; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_utrace.c_start_callback.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_utrace.c_start_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utrace_engine_ops = type { i32 (i32, %struct.utrace_engine*, i64)* }
%struct.utrace_engine = type opaque
%struct.utrace = type { %struct.utrace_engine.0* }
%struct.utrace_report = type { i32, i32 }
%struct.utrace_engine.0 = type { i64, %struct.utrace_engine_ops* }
%struct.task_struct = type { i32 }

@QUIESCE = common dso_local global i32 0, align 4
@ENGINE_STOP = common dso_local global i64 0, align 8
@UTRACE_STOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.utrace_engine_ops* (%struct.utrace*, %struct.utrace_report*, %struct.utrace_engine.0*, %struct.task_struct*, i64)* @start_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.utrace_engine_ops* @start_callback(%struct.utrace* %0, %struct.utrace_report* %1, %struct.utrace_engine.0* %2, %struct.task_struct* %3, i64 %4) #0 {
  %6 = alloca %struct.utrace_engine_ops*, align 8
  %7 = alloca %struct.utrace*, align 8
  %8 = alloca %struct.utrace_report*, align 8
  %9 = alloca %struct.utrace_engine.0*, align 8
  %10 = alloca %struct.task_struct*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.utrace_engine_ops*, align 8
  %13 = alloca i64, align 8
  store %struct.utrace* %0, %struct.utrace** %7, align 8
  store %struct.utrace_report* %1, %struct.utrace_report** %8, align 8
  store %struct.utrace_engine.0* %2, %struct.utrace_engine.0** %9, align 8
  store %struct.task_struct* %3, %struct.task_struct** %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %15 = load %struct.utrace*, %struct.utrace** %7, align 8
  %16 = getelementptr inbounds %struct.utrace, %struct.utrace* %15, i32 0, i32 0
  store %struct.utrace_engine.0* %14, %struct.utrace_engine.0** %16, align 8
  %17 = call i32 (...) @smp_mb()
  %18 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %19 = getelementptr inbounds %struct.utrace_engine.0, %struct.utrace_engine.0* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %13, align 8
  %21 = call i32 (...) @smp_rmb()
  %22 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %23 = getelementptr inbounds %struct.utrace_engine.0, %struct.utrace_engine.0* %22, i32 0, i32 1
  %24 = load %struct.utrace_engine_ops*, %struct.utrace_engine_ops** %23, align 8
  store %struct.utrace_engine_ops* %24, %struct.utrace_engine_ops** %12, align 8
  %25 = load i64, i64* %13, align 8
  %26 = load i32, i32* @QUIESCE, align 4
  %27 = call i64 @UTRACE_EVENT(i32 %26)
  %28 = and i64 %25, %27
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %56

30:                                               ; preds = %5
  %31 = load %struct.task_struct*, %struct.task_struct** %10, align 8
  %32 = load %struct.utrace*, %struct.utrace** %7, align 8
  %33 = load %struct.utrace_report*, %struct.utrace_report** %8, align 8
  %34 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %35 = load %struct.utrace_engine_ops*, %struct.utrace_engine_ops** %12, align 8
  %36 = getelementptr inbounds %struct.utrace_engine_ops, %struct.utrace_engine_ops* %35, i32 0, i32 0
  %37 = load i32 (i32, %struct.utrace_engine*, i64)*, i32 (i32, %struct.utrace_engine*, i64)** %36, align 8
  %38 = load %struct.utrace_report*, %struct.utrace_report** %8, align 8
  %39 = getelementptr inbounds %struct.utrace_report, %struct.utrace_report* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %42 = bitcast %struct.utrace_engine.0* %41 to %struct.utrace_engine*
  %43 = load i64, i64* %11, align 8
  %44 = call i32 %37(i32 %40, %struct.utrace_engine* %42, i64 %43)
  %45 = call i64 @finish_callback(%struct.task_struct* %31, %struct.utrace* %32, %struct.utrace_report* %33, %struct.utrace_engine.0* %34, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %30
  store %struct.utrace_engine_ops* null, %struct.utrace_engine_ops** %6, align 8
  br label %77

48:                                               ; preds = %30
  %49 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %50 = load %struct.utrace*, %struct.utrace** %7, align 8
  %51 = getelementptr inbounds %struct.utrace, %struct.utrace* %50, i32 0, i32 0
  store %struct.utrace_engine.0* %49, %struct.utrace_engine.0** %51, align 8
  %52 = call i32 (...) @smp_mb()
  %53 = load %struct.utrace_engine.0*, %struct.utrace_engine.0** %9, align 8
  %54 = getelementptr inbounds %struct.utrace_engine.0, %struct.utrace_engine.0* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  store i64 %55, i64* %13, align 8
  br label %56

56:                                               ; preds = %48, %5
  %57 = load i64, i64* %13, align 8
  %58 = load i64, i64* @ENGINE_STOP, align 8
  %59 = and i64 %57, %58
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %65

61:                                               ; preds = %56
  %62 = load i32, i32* @UTRACE_STOP, align 4
  %63 = load %struct.utrace_report*, %struct.utrace_report** %8, align 8
  %64 = getelementptr inbounds %struct.utrace_report, %struct.utrace_report* %63, i32 0, i32 1
  store i32 %62, i32* %64, align 4
  br label %65

65:                                               ; preds = %61, %56
  %66 = load i64, i64* %13, align 8
  %67 = load i64, i64* %11, align 8
  %68 = and i64 %66, %67
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %74

70:                                               ; preds = %65
  %71 = load %struct.utrace_report*, %struct.utrace_report** %8, align 8
  %72 = getelementptr inbounds %struct.utrace_report, %struct.utrace_report* %71, i32 0, i32 0
  store i32 0, i32* %72, align 4
  %73 = load %struct.utrace_engine_ops*, %struct.utrace_engine_ops** %12, align 8
  store %struct.utrace_engine_ops* %73, %struct.utrace_engine_ops** %6, align 8
  br label %77

74:                                               ; preds = %65
  %75 = load %struct.utrace*, %struct.utrace** %7, align 8
  %76 = getelementptr inbounds %struct.utrace, %struct.utrace* %75, i32 0, i32 0
  store %struct.utrace_engine.0* null, %struct.utrace_engine.0** %76, align 8
  store %struct.utrace_engine_ops* null, %struct.utrace_engine_ops** %6, align 8
  br label %77

77:                                               ; preds = %74, %70, %47
  %78 = load %struct.utrace_engine_ops*, %struct.utrace_engine_ops** %6, align 8
  ret %struct.utrace_engine_ops* %78
}

declare dso_local i32 @smp_mb(...) #1

declare dso_local i32 @smp_rmb(...) #1

declare dso_local i64 @UTRACE_EVENT(i32) #1

declare dso_local i64 @finish_callback(%struct.task_struct*, %struct.utrace*, %struct.utrace_report*, %struct.utrace_engine.0*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
